// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a default dialog modal 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  background-color: white;
  border-radius: 3px;
  border: 1px solid #e6e6e6;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c6 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c6[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c5 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c4 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c9 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: visible;
  width: 100%;
}

.c7 {
  border-radius: 5px;
}

.c7:focus {
  outline: unset;
}

<div
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 c2 c3 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c4 c5 c6 c3"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c7 c8 c3"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c9 c3"
          id="Modal-3"
        >
          This is the content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly for a dialog modal with a close button 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c14 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c14:focus:not(:focus-visible) {
  outline: none;
}

.c17 {
  fill: inherit;
  position: relative;
  font-size: 1em;
  height: 1em;
  width: 1em;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  border: 1px solid #b3b3b3;
}

.c13:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c13[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c13 {
  border: 0;
  background: unset;
  color: #435a6f;
  fill: #435a6f;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c13:hover {
  color: #000;
  fill: #000;
}

.c11 {
  font-weight: 700;
  line-height: 1.2;
}

.c11:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c11 + .sub-heading {
  margin-top: -1rem;
}

h1.c11 {
  font-size: 3rem;
}

h2.c11 {
  font-size: 2.5rem;
}

h3.c11 {
  font-size: 2rem;
}

h4.c11 {
  font-size: 1.5rem;
}

h5.c11 {
  font-size: 1.25rem;
}

h6.c11 {
  font-size: 1rem;
}

.c11 .c16 {
  top: 0.15em;
}

.c11 {
  font-weight: 600;
}

.c8 {
  background-color: white;
  border-radius: 3px;
  border: 1px solid #e6e6e6;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c6 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c6[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c5 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c15 {
  border: 0px;
  -webkit-clip: rect(0px,0px,0px,0px);
  clip: rect(0px,0px,0px,0px);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0px;
  overflow: hidden;
  position: absolute;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c4 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c18 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: visible;
  width: 100%;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.25rem;
  width: 100%;
}

.c10.c10 {
  margin-bottom: 0px;
}

.c12 {
  min-height: 1.5em;
  width: 1.5em;
  padding: 0px;
}

.c12:hover {
  background-color: #f2f2f2;
}

.c7 {
  border-radius: 5px;
}

.c7:focus {
  outline: unset;
}

<div
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 c2 c3 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c4 c5 c6 c3"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c7 c8 c3"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c9 c3"
        >
          <h5
            class="c10 sub-heading c11 c3"
            id="Modal-4"
          >
            This is a title
          </h5>
          <button
            class="c12 c13 c14"
            kind="link"
            type="button"
          >
            <div
              class="c15 c3"
            >
              Close
            </div>
            <svg
              aria-hidden="true"
              class="c16 c17 c3"
              role="img"
              size="1"
              style="size: 1px;"
              viewBox="0 0 352 512"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                fill="currentColor"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="c18 c3"
          id="Modal-3"
        >
          This is the content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly for a dialog modal with a footer 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  font-weight: 700;
  line-height: 1.2;
}

.c11:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c11 + .sub-heading {
  margin-top: -1rem;
}

h1.c11 {
  font-size: 3rem;
}

h2.c11 {
  font-size: 2.5rem;
}

h3.c11 {
  font-size: 2rem;
}

h4.c11 {
  font-size: 1.5rem;
}

h5.c11 {
  font-size: 1.25rem;
}

h6.c11 {
  font-size: 1rem;
}

.c11 .c14 {
  top: 0.15em;
}

.c11 {
  font-weight: 600;
}

.c8 {
  background-color: white;
  border-radius: 3px;
  border: 1px solid #e6e6e6;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c6 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c6[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c5 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c4 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c12 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: visible;
  width: 100%;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.25rem;
  width: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  padding: 1rem 1rem;
  width: 100%;
}

.c10.c10 {
  margin-bottom: 0px;
}

.c7 {
  border-radius: 5px;
}

.c7:focus {
  outline: unset;
}

<div
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 c2 c3 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c4 c5 c6 c3"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c7 c8 c3"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c9 c3"
        >
          <h5
            class="c10 sub-heading c11 c3"
            id="Modal-4"
          >
            This is a title
          </h5>
        </div>
        <div
          class="c12 c3"
          id="Modal-3"
        >
          This is the content
        </div>
        <div
          class="c13 c3"
          style="justify-content: space-between;"
        >
          <div
            class="c3"
          >
            This is a footer
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly for a dialog modal with a title 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c11 {
  font-weight: 700;
  line-height: 1.2;
}

.c11:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c11 + .sub-heading {
  margin-top: -1rem;
}

h1.c11 {
  font-size: 3rem;
}

h2.c11 {
  font-size: 2.5rem;
}

h3.c11 {
  font-size: 2rem;
}

h4.c11 {
  font-size: 1.5rem;
}

h5.c11 {
  font-size: 1.25rem;
}

h6.c11 {
  font-size: 1rem;
}

.c11 .c13 {
  top: 0.15em;
}

.c11 {
  font-weight: 600;
}

.c8 {
  background-color: white;
  border-radius: 3px;
  border: 1px solid #e6e6e6;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c6 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c6[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c5 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c4 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c12 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: visible;
  width: 100%;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.25rem;
  width: 100%;
}

.c10.c10 {
  margin-bottom: 0px;
}

.c7 {
  border-radius: 5px;
}

.c7:focus {
  outline: unset;
}

<div
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 c2 c3 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c4 c5 c6 c3"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c7 c8 c3"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c9 c3"
        >
          <h5
            class="c10 sub-heading c11 c3"
            id="Modal-4"
          >
            This is a title
          </h5>
        </div>
        <div
          class="c12 c3"
          id="Modal-3"
        >
          This is the content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly for a dialog modal with action buttons 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c17 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c17:focus:not(:focus-visible) {
  outline: none;
}

.c19 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
}

.c19:focus:not(:focus-visible) {
  outline: none;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  border: 1px solid #b3b3b3;
}

.c16:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c16[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c16:hover {
  background-color: #efefef;
}

.c16:hover:active {
  background-color: #e3e3e3;
}

.c18 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #444bc9;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.c18:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #7c81d9 0px 0px 0px 2px;
}

.c18[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c18:hover {
  background-color: #373ebd;
}

.c18:hover:active {
  background-color: #3137a9;
}

.c14 {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.c14 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.c11 {
  font-weight: 700;
  line-height: 1.2;
}

.c11:not(:last-child) {
  margin-bottom: 1rem;
}

.heading.c11 + .sub-heading {
  margin-top: -1rem;
}

h1.c11 {
  font-size: 3rem;
}

h2.c11 {
  font-size: 2.5rem;
}

h3.c11 {
  font-size: 2rem;
}

h4.c11 {
  font-size: 1.5rem;
}

h5.c11 {
  font-size: 1.25rem;
}

h6.c11 {
  font-size: 1rem;
}

.c11 .c20 {
  top: 0.15em;
}

.c11 {
  font-weight: 600;
}

.c8 {
  background-color: white;
  border-radius: 3px;
  border: 1px solid #e6e6e6;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c6 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c6[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c5 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c4 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c12 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: visible;
  width: 100%;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.25rem;
  width: 100%;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  padding: 1rem 1rem;
  width: 100%;
}

.c10.c10 {
  margin-bottom: 0px;
}

.c7 {
  border-radius: 5px;
}

.c7:focus {
  outline: unset;
}

<div
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 c2 c3 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c4 c5 c6 c3"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c7 c8 c3"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c9 c3"
        >
          <h5
            class="c10 sub-heading c11 c3"
            id="Modal-4"
          >
            This is a title
          </h5>
        </div>
        <div
          class="c12 c3"
          id="Modal-3"
        >
          This is the content
        </div>
        <div
          class="c13 c3"
          style="justify-content: flex-end;"
        >
          <div
            class="c3"
          >
            <div
              class="c14 c15 c3"
              spacing="minor-2"
            >
              <button
                class="c16 c17 "
                kind="default"
                type="button"
              >
                Cancel
              </button>
              <button
                class="c18 c19"
                kind="default"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly for a dialog modal with kind alert 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c14 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #fcfcfc;
  color: inherit;
}

.c14:focus:not(:focus-visible) {
  outline: none;
}

.c16 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: #444bc9;
  color: inherit;
}

.c16:focus:not(:focus-visible) {
  outline: none;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c13 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #fcfcfc;
  border-radius: 4px;
  color: #435a6f;
  fill: #435a6f;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
  border: 1px solid #b3b3b3;
}

.c13:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #444bc9 0px 0px 0px 2px;
}

.c13[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c13:hover {
  background-color: #efefef;
}

.c13:hover:active {
  background-color: #e3e3e3;
}

.c15 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #444bc9;
  border-radius: 4px;
  color: #fff;
  fill: #fff;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-weight: 600;
  min-height: 2.5em;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 0 0.8rem;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-hyphens: auto;
  -moz-hyphens: auto;
  -ms-hyphens: auto;
  hyphens: auto;
}

.c15:focus {
  outline: unset;
  z-index: 2;
  box-shadow: #7c81d9 0px 0px 0px 2px;
}

.c15[disabled] {
  cursor: not-allowed;
  opacity: 0.7;
  outline: unset;
  pointer-events: unset;
}

.c15:hover {
  background-color: #373ebd;
}

.c15:hover:active {
  background-color: #3137a9;
}

.c11 {
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  margin-left: -0.5rem;
  margin-top: -0.5rem;
}

.c11 > * {
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.c8 {
  background-color: white;
  border-radius: 3px;
  border: 1px solid #e6e6e6;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c6 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c6[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c5 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c4 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c9 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: visible;
  width: 100%;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #f2f2f2;
  padding: 1rem 1rem;
  width: 100%;
}

.c7 {
  border-radius: 5px;
}

.c7:focus {
  outline: unset;
}

<div
  class=""
>
  <div>
    <div
      aria-hidden="false"
      class="c0 c1 c2 c3"
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c4 c5 c6 c3"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c7 c8 c3"
        role="alertdialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c9 c3"
          id="Modal-3"
        >
          This is the content
        </div>
        <div
          class="c10 c3"
          style="justify-content: flex-end;"
        >
          <div
            class="c3"
          >
            <div
              class="c11 c12 c3"
              spacing="minor-2"
            >
              <button
                class="c13 c14 "
                kind="default"
                type="button"
              >
                Cancel
              </button>
              <button
                class="c15 c16"
                kind="default"
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly for a dialog modal with type 1`] = `
.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  background-color: white;
  border-radius: 3px;
  border: 1px solid #e6e6e6;
}

.c2 {
  -webkit-transform: translate3d(0px,0px,0px);
  -ms-transform: translate3d(0px,0px,0px);
  transform: translate3d(0px,0px,0px);
}

.c2[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c6 {
  -webkit-transform: translate3d(-50%,-50%,0px);
  -ms-transform: translate3d(-50%,-50%,0px);
  transform: translate3d(-50%,-50%,0px);
}

.c6[aria-hidden="true"] {
  pointer-events: none;
  display: none !important;
}

.c1 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 998;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
  -moz-tap-highlight-color: rgba(0,0,0,0);
}

.c5 {
  position: fixed;
  z-index: 19900410;
  left: 50%;
  top: 50%;
}

.c0 {
  background-color: black;
  opacity: 0.6;
}

.c4 {
  padding: 0 1rem;
  max-width: 600px;
  width: 100%;
}

.c9 {
  padding: 1.25rem;
  max-height: 50vh;
  overflow-y: visible;
  width: 100%;
}

.c7 {
  border-radius: 5px;
}

.c7:focus {
  outline: unset;
}

<div
  class=""
>
  <div>
    <button
      aria-hidden="false"
      class="c0 c1 c2 c3 "
      role="button"
      tabindex="-1"
    />
    <div
      aria-hidden="false"
      aria-modal="true"
      class="c4 c5 c6 c3"
      role="dialog"
    >
      <div
        aria-describedby="Modal-3"
        aria-labelledby="Modal-4"
        class="c7 c8 c3"
        role="dialog"
        style="width: 100%;"
        tabindex="-1"
        width="100%"
      >
        <div
          class="c9 c3"
          id="Modal-3"
        >
          This is the content
        </div>
      </div>
    </div>
  </div>
</div>
`;
